Fixed word wrap

--- a/resources/assets/sass/design.scss
+++ b/resources/assets/sass/design.scss
@@ -13,6 +13,10 @@ body{
     max-height: 100vh;
 }
 
+p{
+    word-wrap: break-word;
+}
+
 a{
     color: $primary-color
 }
